Mon Dec  9 22:15:17 EST 2002	JK Lowden <jklowden@schemamania.org>
	* TODO minor update
	* configure.in added test for libgen.h
	* src/dblib/unittests/common.c src/dblib/unittests/common.h better messages
	* src/dblib/unittests/t0001.c
	- accept optional servername & timeout parameters (to test dbsetlogintime)
	* src/tds/login.c fixed connect timeout logic
	- dbsetlogintime() works

Mon Dec  9 17:22:26 EST 2002 	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/dblib/dblib.c src/dblib/unittests/t0001.c src/tds/login.c
	- support for dbsetlogintime (not yet working)

Mon Dec 09 21:48:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	- update odbc status

Mon Dec  9 12:40:48 EST 2002	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt	added perl to output bcp-ready format
	* src/tds/login.c 	added TDS version to log file

Mon Dec 09 17:39:21 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/replacements/vasprintf.c:
	- improve win32 compile

Sun Dec 08 10:07:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html: slightly updated

Sat Dec 07 14:48:00 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: fix input parameters for TDS8

Sat Dec 07 14:32:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c src/tds/token.c:
	- handle collate change from server and use it

Fri Dec 06 22:54:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/tds/threadsafe.c:
	- fix compile under Solaris

Fri Dec 06 17:51:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds_sysdep_private.h src/odbc/connectparams.c:
	* src/odbc/convert_sql2string.c src/tds/convert.c:
	* src/tds/login.c src/tds/read.c src/tds/threadsafe.c:
	* src/tds/util.c src/tds/write.c:
	- improve win32 compile (not include files not present)
	* src/tds/query.c src/tds/token.c:
	- do not use collapse if TDS7 is used
